web/renderer/components/StatusWithOptions/index.module.css
.uncommitted {
  @apply hidden lg:flex items-center sticky right-6 mt-2 z-10 min-w-[20rem];

  a {
    @apply mr-3 text-sm;
  }
}

.smallMinWidth {
  @apply min-w-[11rem];
}

.commitButton {
  @apply text-sm px-4;
}

.bold {
  @apply font-semibold;
}

.resetButton {
  @apply ml-3;
}

.resetTable {
  @apply mb-6;

  td,
  th {
    @apply pr-6 text-left pb-1;
  }
}

.checkboxContainer {
  @apply flex items-start text-sm;
}

.checkboxLabel {
  @apply mr-2 whitespace-nowrap text-link-1 font-semibold;
}

.checkbox {
  @apply shrink-0 -translate-y-0.5;
}

